add build list handler
